extensions/ext_scanners.c
/* Generated by re2c 0.16 */
#include <stdlib.h>
#include "ext_scanners.h"

bufsize_t _ext_scan_at(bufsize_t (*scanner)(const unsigned char *),
                       const char *s, bufsize_t offset) {
  bufsize_t res;
  bufsize_t len = strlen(s);
  unsigned char *ptr = (unsigned char *)s;

  if (ptr == NULL || offset > len) {
    return 0;
  } else {
    res = scanner(ptr + offset);
  }

  return res;
}

bufsize_t _scan_table_cell(const unsigned char *p) {
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

  {
    unsigned char yych;
    unsigned int yyaccept = 0;
    static const unsigned char yybm[] = {
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 0,   128, 128, 0,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 0,   128,
        128, 128, 0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,
    };
    yych = *(marker = p);
    if (yych <= 0xDF) {
      if (yych <= '{') {
        if (yych != '\n')
          goto yy3;
      } else {
        if (yych <= '|')
          goto yy4;
        if (yych <= 0x7F)
          goto yy3;
        if (yych >= 0xC2)
          goto yy5;
      }
    } else {
      if (yych <= 0xEF) {
        if (yych <= 0xE0)
          goto yy7;
        if (yych == 0xED)
          goto yy9;
        goto yy8;
      } else {
        if (yych <= 0xF0)
          goto yy10;
        if (yych <= 0xF3)
          goto yy11;
        if (yych <= 0xF4)
          goto yy12;
      }
    }
  yy2 : { return 0; }
  yy3:
    yych = *++p;
    goto yy2;
  yy4:
    yyaccept = 0;
    yych = *(marker = ++p);
    if (yych <= '{') {
      if (yych <= '\n') {
        if (yych <= '\t')
          goto yy14;
        goto yy2;
      } else {
        if (yych == '\r')
          goto yy2;
        goto yy14;
      }
    } else {
      if (yych <= 0x7F) {
        if (yych <= '|')
          goto yy2;
        goto yy14;
      } else {
        if (yych <= 0xC1)
          goto yy2;
        if (yych <= 0xF4)
          goto yy14;
        goto yy2;
      }
    }
  yy5:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy3;
  yy6:
    p = marker;
    if (yyaccept == 0) {
      goto yy2;
    } else {
      goto yy15;
    }
  yy7:
    yych = *++p;
    if (yych <= 0x9F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy5;
    goto yy6;
  yy8:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy5;
    goto yy6;
  yy9:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0x9F)
      goto yy5;
    goto yy6;
  yy10:
    yych = *++p;
    if (yych <= 0x8F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy8;
    goto yy6;
  yy11:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy8;
    goto yy6;
  yy12:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0x8F)
      goto yy8;
    goto yy6;
  yy13:
    yyaccept = 1;
    marker = ++p;
    yych = *p;
  yy14:
    if (yybm[0 + yych] & 128) {
      goto yy13;
    }
    if (yych <= 0xED) {
      if (yych <= 0xDF) {
        if (yych >= 0xC2)
          goto yy16;
      } else {
        if (yych <= 0xE0)
          goto yy17;
        if (yych <= 0xEC)
          goto yy18;
        goto yy19;
      }
    } else {
      if (yych <= 0xF0) {
        if (yych <= 0xEF)
          goto yy18;
        goto yy20;
      } else {
        if (yych <= 0xF3)
          goto yy21;
        if (yych <= 0xF4)
          goto yy22;
      }
    }
  yy15 : { return (bufsize_t)(p - start); }
  yy16:
    ++p;
    yych = *p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy13;
    goto yy6;
  yy17:
    ++p;
    yych = *p;
    if (yych <= 0x9F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy16;
    goto yy6;
  yy18:
    ++p;
    yych = *p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy16;
    goto yy6;
  yy19:
    ++p;
    yych = *p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0x9F)
      goto yy16;
    goto yy6;
  yy20:
    ++p;
    yych = *p;
    if (yych <= 0x8F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy18;
    goto yy6;
  yy21:
    ++p;
    yych = *p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy18;
    goto yy6;
  yy22:
    ++p;
    yych = *p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0x8F)
      goto yy18;
    goto yy6;
  }
}

bufsize_t _scan_table_row_end(const unsigned char *p) {
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

  {
    unsigned char yych;
    yych = *(marker = p);
    if (yych <= 0xDF) {
      if (yych <= '{') {
        if (yych != '\n')
          goto yy26;
      } else {
        if (yych <= '|')
          goto yy27;
        if (yych <= 0x7F)
          goto yy26;
        if (yych >= 0xC2)
          goto yy28;
      }
    } else {
      if (yych <= 0xEF) {
        if (yych <= 0xE0)
          goto yy30;
        if (yych == 0xED)
          goto yy32;
        goto yy31;
      } else {
        if (yych <= 0xF0)
          goto yy33;
        if (yych <= 0xF3)
          goto yy34;
        if (yych <= 0xF4)
          goto yy35;
      }
    }
  yy25 : { return 0; }
  yy26:
    yych = *++p;
    goto yy25;
  yy27:
    yych = *(marker = ++p);
    if (yych == '\n')
      goto yy36;
    if (yych == '\r')
      goto yy38;
    goto yy25;
  yy28:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy29;
    if (yych <= 0xBF)
      goto yy26;
  yy29:
    p = marker;
    goto yy25;
  yy30:
    yych = *++p;
    if (yych <= 0x9F)
      goto yy29;
    if (yych <= 0xBF)
      goto yy28;
    goto yy29;
  yy31:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy29;
    if (yych <= 0xBF)
      goto yy28;
    goto yy29;
  yy32:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy29;
    if (yych <= 0x9F)
      goto yy28;
    goto yy29;
  yy33:
    yych = *++p;
    if (yych <= 0x8F)
      goto yy29;
    if (yych <= 0xBF)
      goto yy31;
    goto yy29;
  yy34:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy29;
    if (yych <= 0xBF)
      goto yy31;
    goto yy29;
  yy35:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy29;
    if (yych <= 0x8F)
      goto yy31;
    goto yy29;
  yy36:
    ++p;
    { return (bufsize_t)(p - start); }
  yy38:
    ++p;
    if ((yych = *p) == '\n')
      goto yy36;
    goto yy29;
  }
}

bufsize_t _scan_table_start(const unsigned char *p) {
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

  {
    unsigned char yych;
    static const unsigned char yybm[] = {
        0, 0,   0, 0, 0, 0, 0, 0, 0, 64, 0,  64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  64, 0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 128, 0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0, 0, 0, 0, 0, 0, 0, 0, 0,
        0, 0,   0, 0, 0, 0, 0, 0, 0, 0,  0,  0,  0,  0,
    };
    yych = *(marker = p);
    if (yych <= 0xDF) {
      if (yych <= '{') {
        if (yych != '\n')
          goto yy42;
      } else {
        if (yych <= '|')
          goto yy43;
        if (yych <= 0x7F)
          goto yy42;
        if (yych >= 0xC2)
          goto yy44;
      }
    } else {
      if (yych <= 0xEF) {
        if (yych <= 0xE0)
          goto yy46;
        if (yych == 0xED)
          goto yy48;
        goto yy47;
      } else {
        if (yych <= 0xF0)
          goto yy49;
        if (yych <= 0xF3)
          goto yy50;
        if (yych <= 0xF4)
          goto yy51;
      }
    }
  yy41 : { return 0; }
  yy42:
    yych = *++p;
    goto yy41;
  yy43:
    yych = *(marker = ++p);
    if (yybm[0 + yych] & 64) {
      goto yy52;
    }
    if (yych == '-')
      goto yy54;
    goto yy41;
  yy44:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy45;
    if (yych <= 0xBF)
      goto yy42;
  yy45:
    p = marker;
    goto yy41;
  yy46:
    yych = *++p;
    if (yych <= 0x9F)
      goto yy45;
    if (yych <= 0xBF)
      goto yy44;
    goto yy45;
  yy47:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy45;
    if (yych <= 0xBF)
      goto yy44;
    goto yy45;
  yy48:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy45;
    if (yych <= 0x9F)
      goto yy44;
    goto yy45;
  yy49:
    yych = *++p;
    if (yych <= 0x8F)
      goto yy45;
    if (yych <= 0xBF)
      goto yy47;
    goto yy45;
  yy50:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy45;
    if (yych <= 0xBF)
      goto yy47;
    goto yy45;
  yy51:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy45;
    if (yych <= 0x8F)
      goto yy47;
    goto yy45;
  yy52:
    ++p;
    yych = *p;
    if (yybm[0 + yych] & 64) {
      goto yy52;
    }
    if (yych != '-')
      goto yy45;
  yy54:
    ++p;
    yych = *p;
    if (yybm[0 + yych] & 128) {
      goto yy54;
    }
    if (yych <= '\f') {
      if (yych == '\t')
        goto yy56;
      if (yych <= '\n')
        goto yy45;
    } else {
      if (yych <= ' ') {
        if (yych <= 0x1F)
          goto yy45;
      } else {
        if (yych == '|')
          goto yy58;
        goto yy45;
      }
    }
  yy56:
    ++p;
    yych = *p;
    if (yych <= '\f') {
      if (yych == '\t')
        goto yy56;
      if (yych <= '\n')
        goto yy45;
      goto yy56;
    } else {
      if (yych <= ' ') {
        if (yych <= 0x1F)
          goto yy45;
        goto yy56;
      } else {
        if (yych != '|')
          goto yy45;
      }
    }
  yy58:
    ++p;
    yych = *p;
    if (yybm[0 + yych] & 64) {
      goto yy52;
    }
    if (yych <= '\r') {
      if (yych <= 0x08)
        goto yy45;
      if (yych >= '\v')
        goto yy61;
    } else {
      if (yych == '-')
        goto yy54;
      goto yy45;
    }
  yy59:
    ++p;
    { return (bufsize_t)(p - start); }
  yy61:
    ++p;
    if ((yych = *p) == '\n')
      goto yy59;
    goto yy45;
  }
}
